Bug 1169611 - Rewrite IonBuilder::getPropTryConstant to not require a singleton result. r=bhackett